--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = [
     {name = "Achraf CHADIL",email = "chadil.hef@gmail.com"}
 ]
 readme = "README.md"
-requires-python = ">=3.11"
+requires-python = ">=3.10,<3.11"
 dependencies = [
     "livekit-agents[openai,silero,turn-detector] (==1.2.8)",
     "livekit-plugins-noise-cancellation (>=0.2,<1.0)",
@@ -21,7 +21,8 @@ dependencies = [
     "uvloop (>=0.21.0,<0.22.0)",
     "httptools (>=0.6.4,<0.7.0)",
     "bleach (>=6.2.0,<7.0.0)",
-    "redis (>=6.4.0,<7.0.0)"
+    "redis (>=6.4.0,<7.0.0)",
+    "openai (==1.108.1)"
 ]
 
 [tool.poetry]
@@ -37,7 +38,7 @@ build-backend = "poetry.core.masonry.api"
 
 
 [tool.ruff]
-line-length = 150
+line-length = 200
 lint.select = [
     "E",   # pycodestyle errors
     "W",   # pycodestyle warnings
