--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.10,<3.11"
 dependencies = [
-    "livekit-agents[openai,silero,turn-detector] (==1.2.8)",
+    "livekit-agents[openai,silero,turn-detector] (==1.2.14)",
     "livekit-plugins-noise-cancellation (>=0.2,<1.0)",
     "python-dotenv (>=1.1.1,<2.0.0)",
     "pre-commit (>=4.3.0,<5.0.0)",
@@ -22,7 +22,7 @@ dependencies = [
     "httptools (>=0.6.4,<0.7.0)",
     "bleach (>=6.2.0,<7.0.0)",
     "redis (>=6.4.0,<7.0.0)",
-    "openai (==1.108.1)"
+    "openai (>=2.2.0,<3.0.0)",
 ]
 
 [tool.poetry]
