--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ authors = [
     {name = "Achraf CHADIL",email = "chadil.hef@gmail.com"}
 ]
 readme = "README.md"
+requires-python = ">=3.10"
 dependencies = [
     "livekit-agents[openai,silero,turn-detector, gladia ] (==1.2.15)",
     "livekit-plugins-noise-cancellation (>=0.2,<1.0)",
